--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -19,6 +19,13 @@
    "id": "03649e28",
    "metadata": {},
    "source": [
+    "Answer - \n",
+    "\n",
+    "Values and Expressions:\n",
+    "\n",
+    "Values are data elements like numbers or strings that can be used in expressions or assigned to variables.\n",
+    "Expressions are combinations of values and operators that can be evaluated to produce a value.\n",
+    "\n",
     "Values:\n",
     "\n",
     "'hello': This is a string value.\n",
@@ -45,7 +52,10 @@
    "id": "599b9dca",
    "metadata": {},
    "source": [
+    "Answer -\n",
+    "\n",
     "String: A string is a data type used to represent textual information. It is enclosed within single or double quotes. For example, 'hello' is a string.\n",
+    "\n",
     "Variable: A variable is a named reference to a value. It can hold different types of data, including strings. For instance, name = 'John' assigns the string 'John' to the variable name."
    ]
   },
@@ -62,6 +72,7 @@
    "id": "2aa360ec",
    "metadata": {},
    "source": [
+    "Answer - \n",
     "Integer: An integer is a whole number without any decimal or fractional part. Examples include -5, 0, and 42.\n",
     "\n",
     "Float: A float (floating-point number) represents real numbers with decimal parts. Examples include -3.14, 0.5, and 2.718.\n",
@@ -82,6 +93,9 @@
    "id": "40e8ab1f",
    "metadata": {},
    "source": [
+    "Answer - \n",
+    "An expression is made up of operators and operands. Operators perform operations on operands, and expressions yield a value. All expressions evaluate to a value.\n",
+    "\n",
     "An expression is composed of values, variables, and operators. It represents a computation that can be evaluated to produce a result.\n",
     "\n",
     "Expressions perform various operations such as arithmetic calculations, string concatenation, comparison, etc.\n",
@@ -102,8 +116,12 @@
    "id": "7831d601",
    "metadata": {},
    "source": [
+    "Answer - spam = 10 is the assignment statement . \n",
+    "\n",
+    "Expression - \n",
     "An expression is a piece of code that can be evaluated to produce a value. It doesn't necessarily perform an action but computes a result.\n",
     "\n",
+    "Statement - \n",
     "A statement is a complete line of code that performs an action. It can include expressions. Statements can also include assignments, loops, conditionals, etc."
    ]
   },
@@ -119,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6ed7e990",
    "metadata": {},
    "outputs": [
@@ -129,7 +147,7 @@
        "23"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "35e24e8e",
    "metadata": {},
    "outputs": [
@@ -151,7 +169,7 @@
        "22"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,6 +183,8 @@
    "id": "31fd8e3a",
    "metadata": {},
    "source": [
+    "Answer -\n",
+    "\n",
     "The variable bacon will still contain the value 22. The expression bacon + 1 is evaluated to 23,\n",
     "but the result isn't stored back into the bacon variable. To update the value of bacon, \n",
     "you'd need to assign the result of the expression back to the variable: bacon = bacon + 1."
@@ -182,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9de53f68",
    "metadata": {},
    "outputs": [
@@ -192,7 +212,7 @@
        "'spamspamspam'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,12 +226,12 @@
    "id": "27d27d56",
    "metadata": {},
    "source": [
-    "This concatenates the strings to result in 'spamspamspam'"
+    "String concatenation - This concatenates the strings to result in 'spamspamspam'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "243ef01d",
    "metadata": {},
    "outputs": [
@@ -221,7 +241,7 @@
        "'spamspamspam'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +255,7 @@
    "id": "919c8596",
    "metadata": {},
    "source": [
-    "This replicates the string three times to result in 'spamspamspam'"
+    "String Replication / Multiplication  - This replicates the string three times to result in 'spamspamspam'"
    ]
   },
   {
@@ -251,6 +271,7 @@
    "id": "3363295f",
    "metadata": {},
    "source": [
+    "Answer - \n",
     "eggs is a valid variable name because it starts with a letter and follows the rules for naming variables.\n",
     "\n",
     "100 is invalid as a variable name because it starts with a digit. Variable names cannot start with digits."
@@ -269,6 +290,7 @@
    "id": "e78d576d",
    "metadata": {},
    "source": [
+    "Answer - \n",
     "int(): Converts a value to an integer. Example: int(\"42\") returns the integer 42.\n",
     "\n",
     "float(): Converts a value to a floating-point number. Example: float(\"3.14\") returns the float 3.14.\n",
@@ -287,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9e89cbf8",
    "metadata": {},
    "outputs": [
@@ -298,7 +320,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mI have eaten \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m99\u001b[39;49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m burritos.\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mI have eaten \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m99\u001b[39;49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m burritos.\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
       "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
      ]
     }
@@ -312,6 +334,9 @@
    "id": "344eac1b",
    "metadata": {},
    "source": [
+    "\n",
+    "Answer - \n",
+    "\n",
     "The expression causes an error because you're trying to concatenate a string with an integer directly. \n",
     "To fix it, you need to convert the integer to a string before concatenation:\n",
     "\n"
@@ -319,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d17e59f5",
    "metadata": {},
    "outputs": [
@@ -329,7 +354,7 @@
        "'I have eaten 99 burritos.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
