--- a/01_July_OOPs.ipynb
+++ b/01_July_OOPs.ipynb
@@ -15,6 +15,8 @@
    "source": [
     "Answer - Primary Goals of Object-Oriented Programming (OOP) are - \n",
     "\n",
+    "The primary goal of Object-Oriented Programming (OOP) is to design software in a way that mirrors the real-world entities and their relationships. OOP promotes the organization of code into reusable and modular structures called classes and objects. It aims to simplify the complexity of software development by providing concepts like encapsulation, inheritance, and polymorphism. This approach enhances code maintainability, reusability, and scalability.\n",
+    "\n",
     "1. Robustness:\n",
     "        \n",
     "Robustness refers to the ability of a software system to handle unexpected situations, errors, and exceptions gracefully         without crashing or causing major disruptions. \n",
@@ -55,6 +57,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "224cca60",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4197527802.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    two instances (objects) of the 'Person' class\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# class named 'Person'\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "two instances (objects) of the 'Person' class\n",
+    "person1 = Person(\"Alice\", 25)\n",
+    "person2 = Person(\"Bob\", 30)\n",
+    "\n",
+    "print(person1.name)  \n",
+    "print(person2.age)   \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9a2ff6c5",
    "metadata": {},
@@ -80,6 +112,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a153471",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class DOg\n",
+    "class Dog:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def bark(self):\n",
+    "        print(f\"{self.name} says Woof!\")\n",
+    "\n",
+    "# instance of the 'Dog' class\n",
+    "dog1 = Dog(\"Buddy\")\n",
+    "\n",
+    "dog1.bark()  \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "01f3053c",
    "metadata": {},
@@ -95,6 +148,36 @@
     "Answer - Attributes are variables that hold data related to an object. They represent the object's state. \n",
     "Methods, on the other hand, are functions defined within a class that perform operations on the object's attributes. \n",
     "They represent the object's behavior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "929746e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "78.53975\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Circle:\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "    \n",
+    "    def calculate_area(self):\n",
+    "        return 3.14159 * self.radius ** 2\n",
+    "\n",
+    "# instance of the 'Circle' class\n",
+    "circle = Circle(5)\n",
+    "\n",
+    "print(circle.radius)            \n",
+    "print(circle.calculate_area())  \n"
    ]
   },
   {
@@ -117,6 +200,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "78ea8627",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "Ford\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    # Class variable\n",
+    "    wheels = 4\n",
+    "\n",
+    "    def __init__(self, make):\n",
+    "        self.make = make\n",
+    "\n",
+    "# Creating instances of the 'Car' class\n",
+    "car1 = Car(\"Toyota\")\n",
+    "car2 = Car(\"Ford\")\n",
+    "\n",
+    "print(car1.wheels)  \n",
+    "print(car2.make)    \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "637dd056",
    "metadata": {},
@@ -131,6 +245,35 @@
    "source": [
     "Answer - In Python class methods, the self parameter refers to the instance of the class (the object) that the method is being called on. \n",
     "It allows the method to access and manipulate the object's attributes and call other methods within the same class.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "16adfc49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self):\n",
+    "        self.value = 0\n",
+    "    \n",
+    "    def increment(self):\n",
+    "        self.value += 1\n",
+    "\n",
+    "# instance of the 'Counter' class\n",
+    "counter = Counter()\n",
+    "\n",
+    "counter.increment()\n",
+    "print(counter.value)  \n"
    ]
   },
   {
@@ -149,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "eb887bbd",
    "metadata": {},
    "outputs": [],
@@ -177,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "f6edb6c2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "26f54396",
    "metadata": {},
    "outputs": [],
@@ -197,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "b2f711f4",
    "metadata": {},
    "outputs": [
@@ -207,7 +350,7 @@
        "4"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "88876566",
    "metadata": {},
    "outputs": [],
@@ -228,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "c9bef66e",
    "metadata": {},
    "outputs": [
@@ -238,7 +381,7 @@
        "5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "a604c7e1",
    "metadata": {},
    "outputs": [
@@ -287,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "340a5d0d",
    "metadata": {},
    "outputs": [],
@@ -322,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "011ffa62",
    "metadata": {},
    "outputs": [],
@@ -332,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "d4c3d00b",
    "metadata": {},
    "outputs": [
@@ -356,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "25fd8973",
    "metadata": {},
    "outputs": [],
@@ -366,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "f8d4c5d9",
    "metadata": {},
    "outputs": [
@@ -390,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "926b563e",
    "metadata": {},
    "outputs": [],
@@ -400,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "91c0de57",
    "metadata": {},
    "outputs": [
@@ -439,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "63950c54",
    "metadata": {},
    "outputs": [],
@@ -466,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "fefc3d5d",
    "metadata": {},
    "outputs": [],
@@ -476,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "d47ab4ba",
    "metadata": {},
    "outputs": [],
@@ -486,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "1c32ec04",
    "metadata": {},
    "outputs": [
@@ -505,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "265de678",
    "metadata": {},
    "outputs": [],
@@ -515,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "01b18530",
    "metadata": {},
    "outputs": [
@@ -535,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "5ecbbef5",
    "metadata": {},
    "outputs": [],
@@ -545,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "6f265306",
    "metadata": {},
    "outputs": [
@@ -564,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "a14b92cd",
    "metadata": {},
    "outputs": [],
@@ -574,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "4209b216",
    "metadata": {},
    "outputs": [
@@ -611,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "b2d31167",
    "metadata": {},
    "outputs": [],
@@ -642,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "608c76f0",
    "metadata": {},
    "outputs": [],
@@ -652,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "2652ba62",
    "metadata": {},
    "outputs": [],
@@ -664,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "567f769f",
    "metadata": {},
    "outputs": [
@@ -683,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "id": "216ae540",
    "metadata": {},
    "outputs": [
